--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "snake_torch",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "https://snake-backend-46efhgatka-el.a.run.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
